--- a/src/components/MatchCard.css
+++ b/src/components/MatchCard.css
@@ -70,8 +70,8 @@
 }
 
 .team-logo-compact img {
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
   margin-bottom: 5px;
 }
