--- a/src/components/MatchDetails.css
+++ b/src/components/MatchDetails.css
@@ -89,17 +89,20 @@
 }
 
 .team-logo-container {
-  width: 50px;
-  height: 50px;
-  margin-bottom: 5px;
+  width: 70px;
+  height: 70px;
+  margin-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #f8f9fa;
+  border-radius: 50%;
+  padding: 8px;
 }
 
 .team-logo {
-  max-width: 50px;
-  max-height: 50px;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
