--- a/src/components/MatchDetails.css
+++ b/src/components/MatchDetails.css
@@ -91,13 +91,19 @@
 .team-logo-container {
   width: 70px;
   height: 70px;
-  margin-bottom: 8px;
+  margin-bottom: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #f8f9fa;
   border-radius: 50%;
   padding: 8px;
+}
+
+.team-home .team-logo-container:has(img[alt="Classe FC"]),
+.team-away .team-logo-container:has(img[alt="Classe FC"]) {
+  width: 80px;
+  height: 80px;
 }
 
 .team-logo {
@@ -112,6 +118,8 @@
   color: #343a40;
   margin: 0;
   text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .match-score-display {
