--- a/src/pages/CampeonatosPage.css
+++ b/src/pages/CampeonatosPage.css
@@ -435,19 +435,31 @@ h2.section-title:first-of-type {
 }
 
 .match-team-logo.compact-logo {
-  width: 28px;
-  height: 28px;
-  margin-right: 8px;
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+  padding: 3px;
+  background-color: #f8f9fa;
+  border-radius: 50%;
+  object-fit: contain;
+}
+
+/* Make Classe FC logo larger */
+.match-team-logo.compact-logo[alt="Classe FC"] {
+  width: 50px;
+  height: 50px;
 }
 
 .away-team .match-team-logo.compact-logo {
-  margin-left: 8px;
+  margin-left: 15px;
   margin-right: 0;
 }
 
 .match-team-name.compact-name {
   font-size: 1em;
   font-weight: 600;
+  padding-left: 5px;
+  padding-right: 5px;
   color: #333;
 }
 
